@@ -1,3 +1,8 @@
+2021-05-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bitfields-nibbles.c:
+	  Test from patch #373 by Visenri.
+
 2021-05-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
